# testCppProjectByPython

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  setup.py
calculator/: CMakeLists.txt
calculator/examples/: CMakeLists.txt  example.cpp
calculator/include/: calculator.hpp
calculator/py/: CMakeLists.txt  py_calculator.cpp
calculator/src/: calculator.cpp
tests/: test_calculator.py
